<resources>
    <string name="app_name">CarDealer</string>

    <string name="add_vehicle">Add Vehicle</string>

    <string name="dealer_id">Dealer ID:</string>
    <string name="vehicle_type">Vehicle Type:</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="vehicle_id">Vehicle ID:</string>
    <string name="price">Price:</string>
    <string name="acquisition_date">Acquisition Date:</string>
    <string name="rental_status">Rental Status:</string>
    <string name="dealer_name">Dealer Name</string>
    <string name="acquisition">Acquisition</string>
    <string name="add_dealer">Add Dealer</string>
    <string name="back_button">Back</string>

    <string-array name="vehicleTypes">
        <item><i>select vehicle</i></item>
        <item>Pickup</item>
        <item>Sedan</item>
        <item>Sports Car</item>
        <item>SUV</item>
    </string-array>
    <string name="title_activity_transfer_vehicle">TransferVehicleActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>